--- a/.env
+++ b/.env
@@ -29,3 +29,11 @@ APP_SECRET=
 DATABASE_URL="postgresql://postgres:mypassword@127.0.0.1:5432/mydb?serverVersion=16.9&charset=utf8"
 
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+RABBITMQ_URL=amqp://guest:guest@localhost:5672
+###< symfony/messenger ###
