--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "symfony/ux-icons": "^2.30",
         "symfony/ux-twig-component": "^2.30",
         "symfony/validator": "7.3.*",
+        "symfony/workflow": "7.3.*",
         "symfony/yaml": "7.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
