add parts for practice

--- a/.env
+++ b/.env
@@ -37,3 +37,7 @@ DATABASE_URL="postgresql://postgres:mypassword@127.0.0.1:5432/mydb?serverVersion
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 RABBITMQ_URL=amqp://guest:guest@localhost:5672
 ###< symfony/messenger ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
