--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,9 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     app.site_name: 'My Awesome App'
+    uploads_directory: '%kernel.project_dir%/public/uploads'
+
+
 
 services:
     # default configuration for services in *this* file
@@ -19,6 +22,10 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Service\FileUploader:
+        arguments:
+            $targetDirectory: '%uploads_directory%'
 
 twig:
     globals:
